// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Section > should render 1`] = `
<DocumentFragment>
  <div
    class="py-4 w-full first:pt-8 last:pb-8"
  >
    <div
      class="px-6 mx-auto md:px-10 lg:container"
    />
  </div>
</DocumentFragment>
`;

exports[`Section > should render with border 1`] = `
<DocumentFragment>
  <div
    class="border-b pb-8! pt-8! w-full py-4 first:pt-8 last:pb-8 border-theme-secondary-300 dark:border-theme-secondary-800 hasBorder"
  >
    <div
      class="px-6 mx-auto md:px-10 lg:container"
    />
  </div>
</DocumentFragment>
`;

exports[`Section > should render with custom background class name 1`] = `
<DocumentFragment>
  <div
    class="py-8! w-full py-4 first:pt-8 last:pb-8 bg-theme-secondary-background"
  >
    <div
      class="px-6 mx-auto md:px-10 lg:container"
    />
  </div>
</DocumentFragment>
`;
